Bug 95384 - Tabs-context-menu fail to mention keyboard-shortcut
Summary: Tabs-context-menu fail to mention keyboard-shortcut
Status: RESOLVED FIXED
Alias: None
Product: akregator
Classification: Applications
Component: general (show other bugs)
Version: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2004-12-18 10:27 UTC by Thomas Zander
Modified: 2005-06-23 19:34 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Zander 2004-12-18 10:27:51 UTC
Version:           unknown (using KDE 3.3.90 (alpha1, CVS >= 20041206), compiled sources)
Compiler:          gcc version 3.3.4 (Debian)
OS:                Linux (i686) release 2.4.21

The tabs have context menus, with 'close' being one of them.
Since Ctrl-W works, I was wondering why that is not visible in the context menu (like it is in konqueror).
Comment 1 Heinrich Wendel 2005-06-23 19:34:19 UTC
SVN commit 428304 by lanius:

BUG: 95384

 M  +16 -0     actionmanager.cpp  
 M  +2 -0      actionmanager.h  
 M  +6 -0      akregator_part.rc  
 M  +1 -0      akregator_view.cpp  
 M  +25 -28    tabwidget.cpp