BUG: 95384

svn path=/trunk/KDE/kdepim/akregator/; revision=428304